# docs/swagger.json
@@ -14,7 +14,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/v1/api/auth/check-token": {
+        "/api/v1/auth/check-token": {
             "get": {
                 "security": [
                     {
@@ -57,7 +57,7 @@
                 }
             }
         },
-        "/v1/api/auth/login": {
+        "/api/v1/auth/login": {
             "post": {
                 "description": "Login by using registered account",
                 "consumes": [
@@ -121,7 +121,7 @@
                 }
             }
         },
-        "/v1/api/auth/register": {
+        "/api/v1/auth/register": {
             "post": {
                 "description": "Create User for Guest",
                 "consumes": [
@@ -185,7 +185,7 @@
                 }
             }
         },
-        "/v1/api/todo-list": {
+        "/api/v1/todo-list": {
             "get": {
                 "security": [
                     {
@@ -375,7 +375,7 @@
                 }
             }
         },
-        "/v1/api/todo-lists/{id}": {
+        "/api/v1/todo-lists/{id}": {
             "get": {
                 "security": [
                     {
